# f2c

./: .clang-format  .gitignore  CHANGELOG-ZH.md  CHANGELOG.md  CMakeLists.txt  README-ZH.md  README.md  TODO.md
.github/workflows/: README.md  build-and-test.yml  fuzz.yml  numerical-validation.yml  performance.yml  release.yml  reproducibility.yml  sanitizers.yml  webassembly.yml
include/f2c/: f2c.h  version.h
netlib-f2c/: 00lastchange  changes  download.sh
src/ast/: budget.c  expression.c  format.c  format.h  internal.h  intrinsic.c  lexer.c  parser.c  shape.c  statement.c  token_stream.c  unit.c  unit.h  visit.c
src/ast/declaration/: access.c  access.h  designator.c  designator.h  module_procedure.c  module_procedure.h  procedure.c  procedure.h  use.c  use.h
src/ast/interface/: header.c  header.h  specific.c  specific.h
src/ast/statement/: action.c  assignment.c  case.c  construct.c  control.c  data.c  io_control.c  io_item.c  label.c  parenthesis.c  private.h
src/cli/: include.c  include.h  io.c  io.h  main.c
src/codegen/: allocation.c  array.c  call.c  codegen.h  data.c  expression.c  host.c  io.c  lowering.c  module.c  ownership.c  statement.c  transform.c  unit.c
src/codegen/array/: assignment.c  call.c  component.c  constructor.c  element.c  inquiry.c  private.h  temporary.c
src/codegen/descriptor/: association.c  designator.c  materialize.c  private.h  view.c
src/codegen/expression/: associated.c  bit.c  call.c  character.c  derived_actual.c  descriptor.c  inquiry.c  leaf.c  model.c  numeric.c  private.h  reduction.c  representation.c  statement_function.c  view.c
src/codegen/io/: control.c  format.c  format_control.c  formatted.c  namelist.c  private.h  program.c  support.c  transfer.c  unformatted.c
src/codegen/io/control/: common.c  inquire.c  iolength.c  open.c  position.c  print.c  private.h
src/codegen/io/format/: parser.c  program.c  real.c  state.c
src/codegen/literal/: real.c  real.h
src/codegen/statement/: assignment.c  bit.c  loop.c  pointer.c  private.h  random.c  select.c  target.c  time.c  type_select.c  where.c
src/codegen/transform/: findloc.c  inquiry.c  matrix.c  private.h  view.c
src/codegen/type/: derived.c
src/codegen/unit/: automatic.c  data.c  equivalence.c  interface.c  private.h  scope.c  temporary.c
src/codegen/value/: derived.c  private.h
src/core/: cleanup.c  config.c  support.c  transpile.c
src/frontend/: analyze.c  attributes.c  derived.c  frontend.h  host.c  interface.c  lexer.c  module_constants.h  modules.c  parser.c  pipeline.c  pipeline.h  preprocessor.c  preprocessor.h  private.h  procedure.c  references.c  source.c  source_map.c  statement.c  syntax.c  token.h  token_cursor.c  unit_header.c
src/frontend/declaration/: common.c  contiguous.c  dimension.c  entity.c  namelist.c  optional.c  private.h  syntax.c  type.c
src/frontend/module/: access.c  access.h  dependency.c  dependency.h
src/frontend/preprocessor/: definition.c  expansion.c  expression.c  include.c  private.h
src/internal/: base.h  context.h  f2c.h
src/ir/: expression.h  format.c  format.h  intrinsic.h  statement.h  type.h
src/semantic/: character.c  constant.c  host.c  implicit.c  intrinsic.c  intrinsic.h  model.h  numeric_model.c  numeric_model.h  procedure.c  semantic.h  signature.c  storage.c  type.c  validation.c
src/semantic/constant/: bit.c  character.c  model.c  numeric.c  private.h  real.c
src/semantic/implicit/: declaration.c  private.h  symbols.c
src/semantic/validation/: allocation.c  branch.c  case.c  construct.c  data.c  expression.c  intrinsic.c  io.c  lifetime.c  private.h  procedure.c  statement.c  where.c
test/: alternate_return_differential.sh  array_section_conformance_guard.sh  array_section_differential.sh  benchmark_statistics.h  bit_intrinsic_differential.sh  blas_result_diff.py  blas_trace_instrument.py  block_data_differential.sh  character_intrinsic_differential.sh  check_architecture.cmake  cli_io.cmake  common_equivalence_differential.sh  common_storage_differential.sh  compile_generated.cmake  cross_toolchain_reproducible.sh  daxpy_benchmark.c  dgemm_benchmark.c  dgemv_benchmark.c  dgetf2_benchmark.c  differential_manifest.py  elemental_differential.sh  equivalence_storage_differential.sh  exhaustive_result_diff.py  expression_differential.sh  file_control_differential.sh  format_differential.sh  fuzz_transpile.c  host_association_differential.sh  inquiry_differential.sh  iolength_differential.sh  lapack_daxpy_harness.c  lapack_dgesv_harness.c  lapack_result_diff.py  lapack_trace_instrument.py  legacy_control_differential.sh  lexical_differential.sh  module_data_differential.sh  named_construct_differential.sh  numeric_model_intrinsic_differential.sh  numeric_operation_intrinsic_differential.sh  (+67 more)
test/fixtures/: action_statements.f90  allocatable_component.f90  allocatable_scope.f90  alternate_return.f90  arithmetic_if.f90  arithmetic_if_harness.c  array_constructor.f90  array_constructor_driver.f90  array_constructor_harness.c  array_inquiry.f90  array_section_bounds_once.f90  array_section_conformance_error.f90  assigned_format.f  assigned_goto.f  assumed_size_inquiry.f90  bit_intrinsics.f90  block_data_common.f90  block_finalization.f90  character_abi.f90  character_abi_harness.c  character_intrinsics.f90  common_equivalence.f90  common_storage.f90  complex_arithmetic.f90  contiguous_pointer_error.f90  corrupt_record_io.f90  data_statement.f90  daxpy.f90  daxpy_harness.c  declaration_matrix.f90  deferred_binding.f90  deferred_character.f90  deferred_character_driver.f90  deferred_character_harness.c  defined_assignment.f90  defined_io.f90  defined_operator.f90  derived_namelist.f90  derived_pointer_component.f90  derived_type.f90  (+82 more)
test/fuzz_corpus/: fixed_legacy  free_abstract_procedure  free_array  free_character  free_interface  free_literal_boundaries  free_program  malformed_boz  malformed_character_prefix  malformed_empty_declarator
test/performance/: codegen_report.sh  common.h  lapack.c  level1.c  level2.c  level3.c  matrix.c  matrix.h  reference_matrix.sh
(+13 files in other folders)
